--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       CMAKE_VERSION: 3.18.4
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Install dependencies
       run: |
@@ -46,17 +46,17 @@ jobs:
       id: getfilename
       run: |
         mv app/build/outputs/apk/nightly/debug/omw_debug_*.apk omw-debug-$(git rev-parse --short "$GITHUB_SHA")-${{ matrix.arch }}.apk
-        echo "::set-output name=apk_file::$(ls omw-debug-*.apk | sed 's/\(.*\)\..*/\1/')"
-        echo "::set-output name=symbols_file::$(ls symbols-*.7z | sed 's/\(.*\)\..*/\1/')"
+        echo "apk_file=$(ls omw-debug-*.apk | sed 's/\(.*\)\..*/\1/')" >> $GITHUB_ENV
+        echo "symbols_file=$(ls symbols-*.7z | sed 's/\(.*\)\..*/\1/')" >> $GITHUB_ENV
 
     - name: Upload the APK
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v3
       with:
-        name: ${{ steps.getfilename.outputs.apk_file }}
-        path: ${{ steps.getfilename.outputs.apk_file }}.apk
+        name: ${{ env.apk_file }}
+        path: ${{ env.apk_file }}.apk
 
     - name: Upload debug symbols
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v3
       with:
-        name: ${{ steps.getfilename.outputs.symbols_file }}
-        path: ${{ steps.getfilename.outputs.symbols_file }}.7z
+        name: ${{ env.symbols_file }}
+        path: ${{ env.symbols_file }}.7z
