--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,19 +6,20 @@ jobs:
   build:
     strategy:
       matrix:
-        arch: [arm, arm64, x86, x86_64]
+        arch: [arm64]
 
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
 
     env:
-      CMAKE_VERSION: 3.18.4
+      CMAKE_VERSION: 3.19.7
 
     steps:
     - uses: actions/checkout@v3
 
     - name: Install dependencies
       run: |
-        sudo apt-get install -y build-essential gcc-multilib python unzip pkg-config p7zip-full
+        sudo apt-get update
+        sudo apt-get install -y build-essential gcc-multilib python unzip pkg-config p7zip-full ccache
         cd /home/runner/
         wget https://github.com/Kitware/CMake/releases/download/v$CMAKE_VERSION/cmake-$CMAKE_VERSION-Linux-x86_64.tar.gz
         tar xvf cmake-$CMAKE_VERSION-Linux-x86_64.tar.gz
