--- a/buildscripts/CMakeLists.txt
+++ b/buildscripts/CMakeLists.txt
@@ -521,6 +521,7 @@ set(OSG_COMMON
 	-DCMAKE_CXX_FLAGS=-std=gnu++11
 	-DBUILD_OSG_PLUGIN_OSG=ON
 	-DBUILD_OSG_PLUGIN_DDS=ON
+ -DBUILD_OSG_PLUGIN_DAE=ON
 	-DBUILD_OSG_PLUGIN_TGA=ON
 	-DBUILD_OSG_PLUGIN_BMP=ON
 	-DBUILD_OSG_PLUGIN_JPEG=ON
