--- a/buildscripts/CMakeLists.txt
+++ b/buildscripts/CMakeLists.txt
@@ -37,7 +37,7 @@ set(MYGUI_VERSION 3.4.1)
 set(MYGUI_HASH SHA256=bdf730bdeb4ad89e6b8223967db01aa5274d2b93adc2c0d6aa4842faeed4de1a)
 
 # https://github.com/ptitSeb/gl4es/releases
-set(GL4ES_VERSION v1.0)
+set(GL4ES_VERSION v1.1.4)
 set(GL4ES_HASH SHA256=b565e717c7d192e936bda25f3cb90ad8db398af56414ec08294b6716574c1a6d)
 
 # https://github.com/openscenegraph/OpenSceneGraph/releases
@@ -347,24 +347,24 @@ ExternalProject_Add(bullet
 )
 
 ExternalProject_Add(gl4es
-	URL https://github.com/Duron27/gl4es/archive/refs/tags/${GL4ES_VERSION}.tar.gz
-	https://github.com/xyzz/openmw-deps/releases/download/v0/gl4es-${GL4ES_VERSION}.gz
-	#URL_HASH ${GL4ES_HASH}
-	DOWNLOAD_DIR ${download_dir}
+        URL https://github.com/ptitSeb/gl4es/archive/${GL4ES_VERSION}.tar.gz
+        #https://github.com/xyzz/openmw-deps/releases/download/v0/gl4es-${GL4ES_VERSION}.gz
+        URL_HASH ${GL4ES_HASH}
+        DOWNLOAD_DIR ${download_dir}
 
-	PATCH_COMMAND patch -d <SOURCE_DIR> -p1 -t -N < ${CMAKE_SOURCE_DIR}/patches/gl4es/shared-library.patch
-#	COMMAND patch -d <SOURCE_DIR> -p1 -t -N < ${CMAKE_SOURCE_DIR}/patches/gl4es/gamma.patch
-	#COMMAND patch -d <SOURCE_DIR> -p1 -t -N < ${CMAKE_SOURCE_DIR}/patches/gl4es/keyword-usage.patch
+        PATCH_COMMAND patch -d <SOURCE_DIR> -p1 -t -N < ${CMAKE_SOURCE_DIR}/patches/gl4es/shared-library.patch
+        #COMMAND patch -d <SOURCE_DIR> -p1 -t -N < ${CMAKE_SOURCE_DIR}/patches/gl4es/gamma.patch
+        #COMMAND patch -d <SOURCE_DIR> -p1 -t -N < ${CMAKE_SOURCE_DIR}/patches/gl4es/keyword-usage.patch
 
-	CONFIGURE_COMMAND ""
+        CONFIGURE_COMMAND ""
 
-	BUILD_COMMAND ${wrapper_command} ndk-build
-	${COMMON_NDK_BUILD_FLAGS}
+        BUILD_COMMAND ${wrapper_command} ndk-build
+        ${COMMON_NDK_BUILD_FLAGS}
 
-	INSTALL_COMMAND mkdir -p ${prefix}/lib/
-	COMMAND cp libs/${app_abi}/libGL.so ${prefix}/lib/
-	COMMAND cp -r <SOURCE_DIR>/include ${prefix}/
-    COMMAND cp -r <SOURCE_DIR>/include ${prefix}/include/gl4es/
+        INSTALL_COMMAND mkdir -p ${prefix}/lib/
+        COMMAND cp libs/${app_abi}/libGL.so ${prefix}/lib/
+        COMMAND cp -r <SOURCE_DIR>/include ${prefix}/
+        COMMAND cp -r <SOURCE_DIR>/include ${prefix}/include/gl4es/
 )
 
 ExternalProject_Add(mygui
